// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tag Matches earlier configuration 1`] = `
.daTykl {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(161,97%,38%);
}

.daTykl:hover {
  background-color: hsl(161,97%,33%);
  border: 0;
}

.daTykl:disabled {
  background-color: hsl(161,57%,33%);
  border: 0;
}

.daTykl:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw daTykl"
/>
`;

exports[`Button tag Matches earlier configuration if alternative and disabled prop is true 1`] = `
.iFOruw {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(290,80%,44%);
}

.iFOruw:hover {
  background-color: hsl(290,80%,39%);
  border: 0;
}

.iFOruw:disabled {
  background-color: hsl(290,40%,39%);
  border: 0;
}

.iFOruw:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw iFOruw"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if alternative and outlined prop is true 1`] = `
.ksqNMt {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: inherit;
  border: 3px solid hsl(290,80%,44%);
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  background-color: transparent;
}

.ksqNMt:hover {
  background-color: transparent;
  border: 3px solid hsl(290,80%,39%);
}

.ksqNMt:disabled {
  background-color: transparent;
  border: 3px solid hsl(290,40%,39%);
}

.ksqNMt:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw ksqNMt"
/>
`;

exports[`Button tag Matches earlier configuration if alternative is true 1`] = `
.iFOruw {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(290,80%,44%);
}

.iFOruw:hover {
  background-color: hsl(290,80%,39%);
  border: 0;
}

.iFOruw:disabled {
  background-color: hsl(290,40%,39%);
  border: 0;
}

.iFOruw:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw iFOruw"
/>
`;

exports[`Button tag Matches earlier configuration if alternative, disabled and outlined prop is true 1`] = `
.ksqNMt {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: inherit;
  border: 3px solid hsl(290,80%,44%);
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  background-color: transparent;
}

.ksqNMt:hover {
  background-color: transparent;
  border: 3px solid hsl(290,80%,39%);
}

.ksqNMt:disabled {
  background-color: transparent;
  border: 3px solid hsl(290,40%,39%);
}

.ksqNMt:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw ksqNMt"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if disabled prop is true 1`] = `
.daTykl {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: white;
  border: 0;
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: 0.5rem 1rem;
  background-color: hsl(161,97%,38%);
}

.daTykl:hover {
  background-color: hsl(161,97%,33%);
  border: 0;
}

.daTykl:disabled {
  background-color: hsl(161,57%,33%);
  border: 0;
}

.daTykl:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw daTykl"
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if outlined is true 1`] = `
.hBOGma {
  -webkit-transition: background 100ms linear;
  transition: background 100ms linear;
  color: inherit;
  border: 3px solid hsl(161,97%,38%);
  font-family: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  padding: calc(0.5rem - 3px) calc(1rem - 3px);
  background-color: transparent;
}

.hBOGma:hover {
  background-color: transparent;
  border: 3px solid hsl(161,97%,33%);
}

.hBOGma:disabled {
  background-color: transparent;
  border: 3px solid hsl(161,57%,33%);
}

.hBOGma:not(:disabled) {
  cursor: pointer;
}

<button
  className="Button__Button-jkHDFw hBOGma"
/>
`;
